--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -8,4 +8,4 @@ sql:
         package: "sqlc"
         out: "sqlc"
         emit_empty_slices: true
-        emit_json_tags: true;
+        emit_json_tags: true
